--- a/DL&RL/amazon_reviews.ipynb
+++ b/DL&RL/amazon_reviews.ipynb
@@ -9,358 +9,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting kagglehub\n",
-      "  Using cached kagglehub-0.3.10-py3-none-any.whl.metadata (31 kB)\n",
-      "Requirement already satisfied: packaging in c:\\users\\christian.rueda\\appdata\\local\\anaconda3\\envs\\dias\\lib\\site-packages (from kagglehub) (24.2)\n",
-      "Requirement already satisfied: pyyaml in c:\\users\\christian.rueda\\appdata\\local\\anaconda3\\envs\\dias\\lib\\site-packages (from kagglehub) (6.0.2)\n",
-      "Requirement already satisfied: requests in c:\\users\\christian.rueda\\appdata\\local\\anaconda3\\envs\\dias\\lib\\site-packages (from kagglehub) (2.32.3)\n",
-      "Requirement already satisfied: tqdm in c:\\users\\christian.rueda\\appdata\\local\\anaconda3\\envs\\dias\\lib\\site-packages (from kagglehub) (4.67.1)\n",
-      "Requirement already satisfied: charset_normalizer<4,>=2 in c:\\users\\christian.rueda\\appdata\\local\\anaconda3\\envs\\dias\\lib\\site-packages (from requests->kagglehub) (3.4.1)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\christian.rueda\\appdata\\local\\anaconda3\\envs\\dias\\lib\\site-packages (from requests->kagglehub) (3.10)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\christian.rueda\\appdata\\local\\anaconda3\\envs\\dias\\lib\\site-packages (from requests->kagglehub) (2.3.0)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\christian.rueda\\appdata\\local\\anaconda3\\envs\\dias\\lib\\site-packages (from requests->kagglehub) (2025.1.31)\n",
-      "Requirement already satisfied: colorama in c:\\users\\christian.rueda\\appdata\\local\\anaconda3\\envs\\dias\\lib\\site-packages (from tqdm->kagglehub) (0.4.6)\n",
-      "Using cached kagglehub-0.3.10-py3-none-any.whl (63 kB)\n",
-      "Installing collected packages: kagglehub\n",
-      "Successfully installed kagglehub-0.3.10\n",
-      "Path to dataset files: C:\\Users\\christian.rueda\\.cache\\kagglehub\\datasets\\yasserh\\amazon-product-reviews-dataset\\versions\\1\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install kagglehub\n",
-    "import kagglehub\n",
-    "\n",
-    "# Download latest version\n",
-    "path = kagglehub.dataset_download(\"yasserh/amazon-product-reviews-dataset\")\n",
-    "\n",
-    "print(\"Path to dataset files:\", path)\n",
-    "\n",
-    "fullpath = path+'/'+'7817_1.csv'\n",
-    "# Sentiment Analysis with Deep Learning (RNN and Transformer-BERT) - Updated for Keras 3 and TextVectorization\n",
-    "\n",
-    "# Importing Libraries\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import classification_report\n",
-    "from keras.models import Sequential\n",
-    "from keras.layers import Embedding, LSTM, Dense, Bidirectional, TextVectorization\n",
-    "from transformers import BertTokenizer, TFBertForSequenceClassification\n",
-    "import tensorflow as tf\n",
-    "\n",
-    "# Load Dataset\n",
-    "data = pd.read_csv(fullpath)\n",
-    "data = data[['reviews.text', 'reviews.rating']].dropna()\n",
-    "data.columns = ['review', 'rating']\n",
-    "\n",
-    "# Generate sentiment labels based on ratings\n",
-    "data['sentiment'] = data['rating'].apply(lambda x: 'positive' if x > 3 else ('neutral' if x == 3 else 'negative'))\n",
-    "\n",
-    "# Data visualization\n",
-    "plt.figure(figsize=(8, 5))\n",
-    "sns.countplot(x='sentiment', data=data)\n",
-    "plt.title('Sentiment Distribution')\n",
-    "plt.xlabel('Sentiment')\n",
-    "plt.ylabel('Count')\n",
-    "plt.xticks(rotation=45)\n",
-    "plt.show()\n",
-    "\n",
-    "# Review length distribution\n",
-    "data['review_length'] = data['review'].apply(lambda x: len(str(x).split()))\n",
-    "plt.figure(figsize=(8, 5))\n",
-    "sns.histplot(data['review_length'], bins=50, kde=True)\n",
-    "plt.title('Review Length Distribution')\n",
-    "plt.xlabel('Number of Words in Review')\n",
-    "plt.ylabel('Frequency')\n",
-    "plt.show()\n",
-    "\n",
-    "\n",
-    "# Prepare data\n",
-    "X = data['review'].values\n",
-    "y = pd.get_dummies(data['sentiment']).values\n",
-    "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "    X, y, test_size=0.2, random_state=42, stratify=y\n",
-    ")\n",
-    "\n",
-    "# Text Vectorization using tf.keras.layers\n",
-    "max_features = 10000\n",
-    "sequence_length = 100\n",
-    "vectorize_layer = TextVectorization(\n",
-    "    max_tokens=max_features,\n",
-    "    output_mode='int',\n",
-    "    output_sequence_length=sequence_length\n",
-    ")\n",
-    "\n",
-    "vectorize_layer.adapt(X_train)\n",
-    "\n",
-    "X_train_seq = vectorize_layer(X_train)\n",
-    "X_test_seq = vectorize_layer(X_test)\n",
-    "\n",
-    "# Simple LSTM Model\n",
-    "model_lstm = Sequential([\n",
-    "    Embedding(max_features, 64, input_length=sequence_length),\n",
-    "    LSTM(64),\n",
-    "    Dense(3, activation='softmax')\n",
-    "])\n",
-    "\n",
-    "model_lstm.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
-    "model_lstm.fit(X_train_seq, y_train, epochs=5, batch_size=64, validation_split=0.2)\n",
-    "\n",
-    "# Evaluate LSTM\n",
-    "lstm_preds = model_lstm.predict(X_test_seq).argmax(axis=1)\n",
-    "print(\"LSTM Model Classification Report:\")\n",
-    "print(classification_report(y_test.argmax(axis=1), lstm_preds))\n",
-    "\n",
-    "# Bidirectional LSTM\n",
-    "model_bilstm = Sequential([\n",
-    "    Embedding(max_features, 64, input_length=sequence_length),\n",
-    "    Bidirectional(LSTM(64)),\n",
-    "    Dense(3, activation='softmax')\n",
-    "])\n",
-    "\n",
-    "model_bilstm.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
-    "model_bilstm.fit(X_train_seq, y_train, epochs=5, batch_size=64, validation_split=0.2)\n",
-    "\n",
-    "# Evaluate BiLSTM\n",
-    "bilstm_preds = model_bilstm.predict(X_test_seq).argmax(axis=1)\n",
-    "print(\"Bidirectional LSTM Classification Report:\")\n",
-    "print(classification_report(y_test.argmax(axis=1), bilstm_preds))\n",
-    "\n",
-    "# # Transformer Model (BERT)\n",
-    "bert_tokenizer = BertTokenizer.from_pretrained('bert-base-uncased')\n",
-    "X_train_enc = bert_tokenizer(X_train.tolist(), padding=True, truncation=True, max_length=128, return_tensors='tf')\n",
-    "X_test_enc = bert_tokenizer(X_test.tolist(), padding=True, truncation=True, max_length=128, return_tensors='tf')\n",
-    "\n",
-    "model_bert = TFBertForSequenceClassification.from_pretrained('bert-base-uncased', num_labels=3)\n",
-    "\n",
-    "# Usar strings para optimizer y loss\n",
-    "model_bert.compile(\n",
-    "    optimizer=\"adam\",\n",
-    "    loss=\"categorical_crossentropy\",\n",
-    "    metrics=[\"accuracy\"]\n",
-    ")\n",
-    "\n",
-    "model_bert.fit(\n",
-    "    {'input_ids': X_train_enc['input_ids'], 'attention_mask': X_train_enc['attention_mask']},\n",
-    "    y_train,\n",
-    "    epochs=2,\n",
-    "    batch_size=16,\n",
-    "    validation_split=0.1\n",
-    ")\n",
-    "\n",
-    "# SECCIÓN CORREGIDA PARA LA EVALUACIÓN DE BERT\n",
-    "# Predecir y evaluar resultados\n",
-    "# Sección específica para corregir el problema con la predicción de BERT\n",
-    "# El resto del código permanece igual...\n",
-    "\n",
-    "# Añadir un paso de depuración para ver qué está devolviendo predict\n",
-    "bert_preds = model_bert.predict({'input_ids': X_test_enc['input_ids'], 'attention_mask': X_test_enc['attention_mask']})\n",
-    "\n",
-    "# Imprimir información de depuración\n",
-    "print(\"Tipo de bert_preds:\", type(bert_preds))\n",
-    "if isinstance(bert_preds, dict):\n",
-    "    print(\"Claves disponibles:\", bert_preds.keys())\n",
-    "elif hasattr(bert_preds, \"__dict__\"):\n",
-    "    print(\"Atributos disponibles:\", bert_preds.__dict__.keys())\n",
-    "else:\n",
-    "    print(\"Forma del array:\", bert_preds.shape)\n",
-    "\n",
-    "# Solución simplificada que debería funcionar independientemente del formato de salida\n",
-    "try:\n",
-    "    # Intento 1: Si es un objeto con atributo logits\n",
-    "    if hasattr(bert_preds, 'logits'):\n",
-    "        bert_preds_labels = bert_preds.logits.argmax(axis=1)\n",
-    "    # Intento 2: Si es un diccionario\n",
-    "    elif isinstance(bert_preds, dict) and 'logits' in bert_preds:\n",
-    "        bert_preds_labels = bert_preds['logits'].argmax(axis=1)\n",
-    "    # Intento 3: Si es directamente un array\n",
-    "    else:\n",
-    "        bert_preds_labels = bert_preds.argmax(axis=1)\n",
-    "    \n",
-    "    print(\"Forma de bert_preds_labels:\", bert_preds_labels.shape)\n",
-    "    \n",
-    "except Exception as e:\n",
-    "    print(f\"Error al procesar las predicciones: {e}\")\n",
-    "    # Solución de respaldo extrema\n",
-    "    if isinstance(bert_preds, np.ndarray):\n",
-    "        if len(bert_preds.shape) == 2 and bert_preds.shape[1] == 3:\n",
-    "            bert_preds_labels = np.argmax(bert_preds, axis=1)\n",
-    "        else:\n",
-    "            # Si la forma no es la esperada, intentar adaptarla\n",
-    "            print(\"Forma inesperada. Intentando adaptación\")\n",
-    "            bert_preds_labels = np.argmax(bert_preds.reshape(-1, 3), axis=1)\n",
-    "\n",
-    "print(\"BERT Classification Report:\")\n",
-    "print(classification_report(y_test.argmax(axis=1), bert_preds_labels))\n",
-    "# Añadir después de la evaluación de los modelos (al final del script)\n",
-    "\n",
-    "# Recopilar resultados de los tres modelos\n",
-    "from sklearn.metrics import accuracy_score, precision_recall_fscore_support\n",
-    "import numpy as np\n",
-    "# Función para obtener métricas de evaluación\n",
-    "def get_metrics(y_true, y_pred):\n",
-    "    accuracy = accuracy_score(y_true, y_pred)\n",
-    "    precision, recall, f1, _ = precision_recall_fscore_support(y_true, y_pred, average='weighted')\n",
-    "    return accuracy, precision, recall, f1\n",
-    "\n",
-    "# Calcular métricas para cada modelo\n",
-    "y_true = y_test.argmax(axis=1)\n",
-    "lstm_metrics = get_metrics(y_true, lstm_preds)\n",
-    "bilstm_metrics = get_metrics(y_true, bilstm_preds)\n",
-    "bert_metrics = get_metrics(y_true, bert_preds_labels)\n",
-    "\n",
-    "# Crear DataFrame para visualización\n",
-    "import pandas as pd\n",
-    "models = ['LSTM', 'BiLSTM', 'BERT']\n",
-    "metrics_df = pd.DataFrame({\n",
-    "    'Model': models,\n",
-    "    'Accuracy': [lstm_metrics[0], bilstm_metrics[0], bert_metrics[0]],\n",
-    "    'Precision': [lstm_metrics[1], bilstm_metrics[1], bert_metrics[1]],\n",
-    "    'Recall': [lstm_metrics[2], bilstm_metrics[2], bert_metrics[2]],\n",
-    "    'F1 Score': [lstm_metrics[3], bilstm_metrics[3], bert_metrics[3]]\n",
-    "})\n",
-    "\n",
-    "print(\"Model Performance Comparison:\")\n",
-    "print(metrics_df)\n",
-    "\n",
-    "# Visualizar comparación de modelos\n",
-    "plt.figure(figsize=(12, 8))\n",
-    "\n",
-    "# 1. Gráfico de barras para comparar accuracy\n",
-    "plt.subplot(2, 2, 1)\n",
-    "sns.barplot(x='Model', y='Accuracy', data=metrics_df, palette='viridis')\n",
-    "plt.title('Accuracy Comparison', fontsize=14)\n",
-    "plt.ylim(0, 1)\n",
-    "\n",
-    "# 2. Gráfico de barras para comparar precision\n",
-    "plt.subplot(2, 2, 2)\n",
-    "sns.barplot(x='Model', y='Precision', data=metrics_df, palette='viridis')\n",
-    "plt.title('Precision Comparison', fontsize=14)\n",
-    "plt.ylim(0, 1)\n",
-    "\n",
-    "# 3. Gráfico de barras para comparar recall\n",
-    "plt.subplot(2, 2, 3)\n",
-    "sns.barplot(x='Model', y='Recall', data=metrics_df, palette='viridis')\n",
-    "plt.title('Recall Comparison', fontsize=14)\n",
-    "plt.ylim(0, 1)\n",
-    "\n",
-    "# 4. Gráfico de barras para comparar F1 score\n",
-    "plt.subplot(2, 2, 4)\n",
-    "sns.barplot(x='Model', y='F1 Score', data=metrics_df, palette='viridis')\n",
-    "plt.title('F1 Score Comparison', fontsize=14)\n",
-    "plt.ylim(0, 1)\n",
-    "\n",
-    "plt.tight_layout()\n",
-    "plt.savefig('model_comparison.png', dpi=300, bbox_inches='tight')\n",
-    "plt.show()\n",
-    "\n",
-    "# Gráfico de radar para comparación integral\n",
-    "plt.figure(figsize=(10, 8))\n",
-    "from matplotlib.path import Path\n",
-    "from matplotlib.spines import Spine\n",
-    "from matplotlib.transforms import Affine2D\n",
-    "\n",
-    "def radar_chart(df, metrics):\n",
-    "    # Número de variables\n",
-    "    categories = list(metrics)\n",
-    "    N = len(categories)\n",
-    "    \n",
-    "    # Ángulos para cada eje\n",
-    "    angles = [n / float(N) * 2 * np.pi for n in range(N)]\n",
-    "    angles += angles[:1]  # Cerrar el gráfico\n",
-    "    \n",
-    "    # Inicializar el gráfico\n",
-    "    ax = plt.subplot(111, polar=True)\n",
-    "    \n",
-    "    # Si estuvieras usando más métricas:\n",
-    "    # ax.set_xticks(angles[:-1])\n",
-    "    # ax.set_xticklabels(categories)\n",
-    "    \n",
-    "    # Etiquetas para los ejes\n",
-    "    plt.xticks(angles[:-1], categories, fontsize=12)\n",
-    "    \n",
-    "    # Para cada modelo\n",
-    "    for i, model in enumerate(df['Model']):\n",
-    "        values = df.loc[i, metrics].values.tolist()\n",
-    "        values += values[:1]  # Cerrar la forma\n",
-    "        \n",
-    "        # Dibujar cada modelo\n",
-    "        ax.plot(angles, values, linewidth=2, linestyle='solid', label=model)\n",
-    "        ax.fill(angles, values, alpha=0.1)\n",
-    "    \n",
-    "    # Añadir leyenda\n",
-    "    plt.legend(loc='upper right', bbox_to_anchor=(0.1, 0.1), fontsize=12)\n",
-    "    plt.title('Model Performance Comparison', fontsize=16)\n",
-    "    return ax\n",
-    "\n",
-    "# Crear gráfico de radar\n",
-    "radar_chart(metrics_df, ['Accuracy', 'Precision', 'Recall', 'F1 Score'])\n",
-    "plt.tight_layout()\n",
-    "plt.savefig('model_radar_comparison.png', dpi=300, bbox_inches='tight')\n",
-    "plt.show()\n",
-    "\n",
-    "# Gráfico de tiempo de ejecución por clase (opcional si tienes los tiempos)\n",
-    "# Si no tienes los tiempos reales, puedes usar esta aproximación\n",
-    "time_df = pd.DataFrame({\n",
-    "    'Model': models,\n",
-    "    'Negative': np.random.uniform(0.7, 0.95, 3),  # Reemplaza con valores reales\n",
-    "    'Neutral': np.random.uniform(0.5, 0.85, 3),   # si los tienes\n",
-    "    'Positive': np.random.uniform(0.65, 0.9, 3)\n",
-    "})\n",
-    "\n",
-    "# Graficar matriz de calor para rendimiento por clase\n",
-    "plt.figure(figsize=(10, 6))\n",
-    "performance_by_class = pd.DataFrame({\n",
-    "    'Model': ['LSTM', 'BiLSTM', 'BERT'],\n",
-    "    'Negative': [\n",
-    "        classification_report(y_true, lstm_preds, output_dict=True)['0']['f1-score'],\n",
-    "        classification_report(y_true, bilstm_preds, output_dict=True)['0']['f1-score'],\n",
-    "        classification_report(y_true, bert_preds_labels, output_dict=True)['0']['f1-score']\n",
-    "    ],\n",
-    "    'Neutral': [\n",
-    "        classification_report(y_true, lstm_preds, output_dict=True)['1']['f1-score'],\n",
-    "        classification_report(y_true, bilstm_preds, output_dict=True)['1']['f1-score'],\n",
-    "        classification_report(y_true, bert_preds_labels, output_dict=True)['1']['f1-score']\n",
-    "    ],\n",
-    "    'Positive': [\n",
-    "        classification_report(y_true, lstm_preds, output_dict=True)['2']['f1-score'],\n",
-    "        classification_report(y_true, bilstm_preds, output_dict=True)['2']['f1-score'],\n",
-    "        classification_report(y_true, bert_preds_labels, output_dict=True)['2']['f1-score']\n",
-    "    ]\n",
-    "})\n",
-    "\n",
-    "# Convertir a formato para mapa de calor\n",
-    "heatmap_data = performance_by_class.set_index('Model')\n",
-    "sns.heatmap(heatmap_data, annot=True, cmap='YlGnBu', fmt='.3f')\n",
-    "plt.title('F1-Score por Clase y Modelo', fontsize=16)\n",
-    "plt.tight_layout()\n",
-    "plt.savefig('class_performance_heatmap.png', dpi=300, bbox_inches='tight')\n",
-    "plt.show()\n",
-    "\n",
-    "# Conclusión textual\n",
-    "best_model_idx = metrics_df['F1 Score'].idxmax()\n",
-    "best_model = metrics_df.loc[best_model_idx, 'Model']\n",
-    "best_f1 = metrics_df.loc[best_model_idx, 'F1 Score']\n",
-    "\n",
-    "print(f\"\\nCONCLUSIÓN:\")\n",
-    "print(f\"El mejor modelo para este problema de análisis de sentimientos es {best_model} \")\n",
-    "print(f\"con un F1-Score ponderado de {best_f1:.4f}.\")\n",
-    "print(f\"\\nRendimiento por clase:\")\n",
-    "print(performance_by_class)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "WARNING:tensorflow:From c:\\Users\\christian.rueda\\AppData\\Local\\anaconda3\\envs\\dias\\lib\\site-packages\\tf_keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
       "\n",
       "Ruta a los archivos del dataset: C:\\Users\\christian.rueda\\.cache\\kagglehub\\datasets\\yasserh\\amazon-product-reviews-dataset\\versions\\1\n"
@@ -682,9 +330,8 @@
     }
    ],
    "source": [
-    "# -*- coding: utf-8 -*-\n",
     "\"\"\"\n",
-    "Nombre del archivo: sentiment_analysis.py\n",
+    "Nombre del archivo: amazon_reviews.ipynb\n",
     "Descripción: \n",
     "Este script realiza un análisis de sentimientos en reseñas de productos de Amazon,\n",
     "implementando distintos modelos de Deep Learning (LSTM, BiLSTM y BERT) para \n",
@@ -693,9 +340,9 @@
     "incluyendo métricas de exactitud, precisión, recall y F1-score, así como \n",
     "visualizaciones gráficas para resumir los resultados.\n",
     "\n",
-    "Autor: Tu Nombre\n",
+    "Autor: Christian Rueda Ayala\n",
     "Fecha: 2025-03-19\n",
-    "Versión: 1.0\n",
+    "Versión: 2.0\n",
     "\"\"\"\n",
     "\n",
     "# Se recomienda instalar kagglehub para descargar el dataset (si no se ha hecho antes).\n",
